Clean Java APIs and package Flatpak with Gradle